Add language to html tag

--- a/public/landing.html
+++ b/public/landing.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -22,7 +22,7 @@
           </div>
           <img class="cake-review" src="../images/cake_review.png">
         </div>
-        <i class="close fas fa-times"></i>     
+        <i class="close fas fa-times"></i>
         <a href="landing.html">
           <h2 class="logo"><img src="../images/cake_logo.png"></h2>
         </a>
@@ -40,7 +40,7 @@
           <div>Click <a href="order.html">here</a> to order a cake today, or check out our awesome <a href="gallery.html">gallery!</a></div>
           <p>WE ALSO MAKE CUPCAKES!!!</p>
           <div>🎂🎂🎂🎂🎂🎂🎂🎂🎂🎂🎂</div>
-        </div>       
+        </div>
       </div>
     </div>
     <div class="footer">
