--- a/public/landing.html
+++ b/public/landing.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>The Custom Cakery</title>
     <link rel="stylesheet" href="../styles.css" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Josefin+Slab&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
     <link rel="icon" href="../images/favicon.png" type="image/favicon" sizes="16x16">
   </head>
   <body id="landing">
     <div class="content">
       <div class="header flex">
-        <i class="hamburger fas fa-bars"></i>
+        <p class="hamburger fas fa-bars"></p>
         <div class="menu">
           <div class="links">
             <h5>MENU</h5>
@@ -24,7 +24,7 @@
         </div>
         <i class="close fas fa-times"></i>
         <a href="landing.html">
-          <h2 class="logo"><img src="../images/cake_logo.png"></h2>
+          <h1 class="logo">The Custom Cakery</h1>
         </a>
       </div>
       <div class="flex">
