--- a/public/landing.html
+++ b/public/landing.html
@@ -43,15 +43,15 @@
         </div>
       </div>
     </div>
-    <div class="footer">
-      <div>Contact Us On Social Media OR By Calling 555 - 555 - 5555</div>
-      <div>
-        <a href=""><i class="fab fa-instagram"></i></a>
-        <a href=""><i class="fab fa-facebook-square"></i></a>
-        <a href=""><i class="fas fa-envelope-open"></i></a>
-        <a href=""><i class="fab fa-twitter"></i></a>
-      </div>
-    </div>
+    <footer>
+      <p>Contact Us On Social Media OR By Calling 555 - 555 - 5555</p>
+      <ul>
+        <a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.facebook.com"><i class="fab fa-facebook-square"></i></a>
+        <a href="https://www.google.com"><i class="fas fa-envelope-open"></i></a>
+        <a href="https://www.twitter.com"><i class="fab fa-twitter"></i></a>
+      </ul>
+    </footer>
     <script type="text/javascript" src="../main.js"></script>
     </body>
   </html>
