Restructure sections for semantic html

--- a/public/landing.html
+++ b/public/landing.html
@@ -12,7 +12,7 @@
   <body id="landing">
     <div class="content">
       <div class="header flex">
-        <p class="hamburger fas fa-bars"></p>
+        <i class="hamburger fas fa-bars"></i>
         <div class="menu">
           <div class="links">
             <h5>MENU</h5>
@@ -27,21 +27,20 @@
           <h1 class="logo">The Custom Cakery</h1>
         </a>
       </div>
-      <div class="flex">
-        <div>
+      <main>
+        <section class="main-image">
           <img class="medium-image landing-image" src="../images/sprinkle_cake.jpeg">
-          <div class="margin-top--small medium-image-text"><img src="../images/cake_text.png"></div>
-        </div>
-        <div class="description-text">
-          <div>🎂🎂🎂🎂🎂🎂🎂🎂🎂🎂🎂</div>
+          <p>Click on the cake above to see more of our delicious cakes!</p>
+        </section>
+        <section class="description-text">
+          <hr>
           <p>
             Welcome to The Custom Cakery! We are an entirely custom cake making business, and would love to take on any cake challenge! Our cakes are inspired by many things, including: fresh flowers, winter mountain scenes, a long walk on the beach, spending time with our friends and family, modern art galleries, heavy metal concerts, scuba diving in the carribbean, the smell of rain, our favorite novels, and of course YOU! We would love to create that custom cake of your dreams, just for fun, or for a special event and / or person in your life! These events may include: birthdays, weddings, funerals, get togethers, reunions, band practice, halloween, national chocolate cake day, births, your cat's birthday, quitting a job, apologizing to a friend or acquaintance and more!!!!!
           </p>
-          <div>Click <a href="order.html">here</a> to order a cake today, or check out our awesome <a href="gallery.html">gallery!</a></div>
+          <p>Click <a href="order.html">here</a> to order a cake today, or check out our awesome <a href="gallery.html">gallery!</a></p>
           <p>WE ALSO MAKE CUPCAKES!!!</p>
-          <div>🎂🎂🎂🎂🎂🎂🎂🎂🎂🎂🎂</div>
-        </div>
-      </div>
+        </section>
+      </main>
     </div>
     <footer>
       <p>Contact Us On Social Media OR By Calling 555 - 555 - 5555</p>
