Make modal semantic

--- a/public/landing.html
+++ b/public/landing.html
@@ -10,12 +10,12 @@
     <link rel="icon" href="../images/favicon.png" type="image/favicon" sizes="16x16">
   </head>
   <body id="landing">
-    <div class="content">
+    <header class="content">
       <div class="header flex">
         <i class="hamburger fas fa-bars"></i>
         <div class="menu">
           <div class="links">
-            <h5>MENU</h5>
+            <h3>MENU</h3>
             <a href="landing.html">&bull; Home</a>
             <a href="order.html">&bull; Order a Cake</a>
             <a href="gallery.html">&bull; The Gallery</a>
@@ -27,6 +27,7 @@
           <h1 class="logo">The Custom Cakery</h1>
         </a>
       </div>
+    </header>
       <main>
         <section class="main-image">
           <img class="medium-image landing-image" src="../images/sprinkle_cake.jpeg">
@@ -41,7 +42,6 @@
           <p>WE ALSO MAKE CUPCAKES!!!</p>
         </section>
       </main>
-    </div>
     <footer>
       <p>Contact Us On Social Media OR By Calling 555 - 555 - 5555</p>
       <ul>
