Add alt to image

--- a/public/landing.html
+++ b/public/landing.html
@@ -30,7 +30,7 @@
     </header>
       <main>
         <section class="main-image">
-          <img class="medium-image landing-image" src="../images/sprinkle_cake.jpeg">
+          <img class="medium-image landing-image" src="../images/sprinkle_cake.jpeg" alt="purple cake with sprinkles">
           <p>Click on the cake above to see more of our delicious cakes!</p>
         </section>
         <section class="description-text">
