Add role to social media links

--- a/public/landing.html
+++ b/public/landing.html
@@ -45,10 +45,10 @@
     <footer>
       <p>Contact Us On Social Media OR By Calling 555 - 555 - 5555</p>
       <section class="social-media">
-        <a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.facebook.com"><i class="fab fa-facebook-square"></i></a>
-        <a href="https://www.google.com"><i class="fas fa-envelope-open"></i></a>
-        <a href="https://www.twitter.com"><i class="fab fa-twitter"></i></a>
+        <a role="link" href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
+        <a role="link" href="https://www.facebook.com"><i class="fab fa-facebook-square"></i></a>
+        <a role="link" href="https://www.google.com"><i class="fas fa-envelope-open"></i></a>
+        <a role="link" href="https://www.twitter.com"><i class="fab fa-twitter"></i></a>
       </section>
     </footer>
     <script type="text/javascript" src="../main.js"></script>
