--- a/public/gallery.html
+++ b/public/gallery.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -30,51 +30,51 @@
       <h4>CHECK OUT OUR CAKES!</h4>
       <div class="gallery-wrapper">
         <div class="gallery-item">
-          <img src="../images/01.jpg">
+          <img src="../images/01.jpg" alt="rose created with chocolate frosting on a cupcake">
           <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
         <div class="gallery-item">
-          <img src="../images/02.jpg">
+          <img src="../images/02.jpg" alt="slice of tiramusu on a plate">
           <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
         <div class="gallery-item">
-          <img src="../images/03.jpg">
+          <img src="../images/03.jpg" alt="hand holding a cupcake with frosting">
           <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
         <div class="gallery-item">
-          <img src="../images/04.jpg">
+          <img src="../images/04.jpg" alt="slice of chocolate cake with chocolate filling on plate">
           <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
         <div class="gallery-item">
-          <img src="../images/05.jpg" >
+          <img src="../images/05.jpg" alt="cupcake with fruity pebbles on frosting">
           <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
         <div class="gallery-item">
-          <img src="../images/06.jpg">
+          <img src="../images/06.jpg" alt="drizzled caked with unicorn on top">
           <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
         <div class="gallery-item">
-          <img src="../images/07.jpg">
+          <img src="../images/07.jpg" alt="naked cake with rasperries on top of frosting">
           <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
         <div class="gallery-item">
-          <img src="../images/08.jpg">
+          <img src="../images/08.jpg" alt="cake with sparkler on top and cactuses on the side">
           <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
         <div class="gallery-item">
-          <img src="../images/09.jpg">
+          <img src="../images/09.jpg" alt="rainbow cupcake">
           <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
         <div class="gallery-item">
-          <img src="../images/10.jpg">
+          <img src="../images/10.jpg" alt="chocolate cupcake with vanilla frosting">
           <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
         <div class="gallery-item">
-          <img src="../images/11.jpg">
+          <img src="../images/11.jpg" alt="chocolate cake with chocolate drizzle">
           <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
         <div class="gallery-item">
-          <img src="../images/12.jpg">
+          <img src="../images/12.jpg" alt="chocolate cupcake with chocolate shavings on top of frosting">
           <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
       </div>
