--- a/public/gallery.html
+++ b/public/gallery.html
@@ -15,7 +15,7 @@
         <i class="hamburger fas fa-bars"></i>
         <div class="menu">
           <div class="links">
-            <h5>MENU</h5>
+            <h3>MENU</h3>
             <a href="landing.html">&bull; Home</a>
             <a href="order.html">&bull; Order a Cake</a>
             <a href="gallery.html">&bull; The Gallery</a>
@@ -24,7 +24,7 @@
         </div>
         <i class="close fas fa-times"></i>
         <a href="landing.html">
-          <h2 class="logo"><img src="../images/cake_logo.png"></h2>
+          <h1 class="logo">The Custom Cakery</h1>
         </a>
       </div>
       <h4>CHECK OUT OUR CAKES!</h4>
@@ -80,15 +80,15 @@
       </div>
       <h1>"I ate a cereal cupcake from The Custom Cakery and it was LITERALLY the best thing I've ever eaten." - yet another satisfied customer</h1>
     </div>
-    <div class="footer">
-      <div>Contact Us</div>
-      <div>
-        <a href=""><i class="fab fa-instagram"></i></a>
-        <a href=""><i class="fab fa-facebook-square"></i></a>
-        <a href=""><i class="fas fa-envelope-open"></i></a>
-        <a href=""><i class="fab fa-twitter"></i></a>
-      </div>
-    </div>
+    <footer>
+      <p>Contact Us On Social Media OR By Calling 555 - 555 - 5555</p>
+      <section class="social-media">
+        <a role="link" href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
+        <a role="link" href="https://www.facebook.com"><i class="fab fa-facebook-square"></i></a>
+        <a role="link" href="https://www.google.com"><i class="fas fa-envelope-open"></i></a>
+        <a role="link" href="https://www.twitter.com"><i class="fab fa-twitter"></i></a>
+      </section>
+    </footer>
     <script type="text/javascript" src="../main.js"></script>
   </body>
 </html>
