Add tabindex to images

--- a/public/gallery.html
+++ b/public/gallery.html
@@ -12,7 +12,7 @@
   <body id="gallery">
     <div class="content">
       <div class="header flex">
-        <i class="hamburger fas fa-bars"></i>
+        <i tabindex="1" class="hamburger fas fa-bars"></i>
         <div class="menu">
           <div class="links">
             <h3>MENU</h3>
@@ -29,51 +29,51 @@
       </div>
       <h4>CHECK OUT OUR CAKES!</h4>
       <div class="gallery-wrapper">
-        <div class="gallery-item">
+        <div tabindex="2" class="gallery-item">
           <img src="../images/01.jpg" alt="rose created with chocolate frosting on a cupcake">
           <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
-        <div class="gallery-item">
+        <div tabindex="3" class="gallery-item">
           <img src="../images/02.jpg" alt="slice of tiramusu on a plate">
           <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
-        <div class="gallery-item">
+        <div tabindex="3" class="gallery-item">
           <img src="../images/03.jpg" alt="hand holding a cupcake with frosting">
           <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
-        <div class="gallery-item">
+        <div tabindex="5" class="gallery-item">
           <img src="../images/04.jpg" alt="slice of chocolate cake with chocolate filling on plate">
           <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
-        <div class="gallery-item">
+        <div tabindex="6" class="gallery-item">
           <img src="../images/05.jpg" alt="cupcake with fruity pebbles on frosting">
           <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
-        <div class="gallery-item">
+        <div tabindex="7" class="gallery-item">
           <img src="../images/06.jpg" alt="drizzled caked with unicorn on top">
           <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
-        <div class="gallery-item">
+        <div tabindex="8" class="gallery-item">
           <img src="../images/07.jpg" alt="naked cake with rasperries on top of frosting">
           <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
-        <div class="gallery-item">
+        <div tabindex="9" class="gallery-item">
           <img src="../images/08.jpg" alt="cake with sparkler on top and cactuses on the side">
           <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
-        <div class="gallery-item">
+        <div tabindex="10" class="gallery-item">
           <img src="../images/09.jpg" alt="rainbow cupcake">
           <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
-        <div class="gallery-item">
+        <div tabindex="11" class="gallery-item">
           <img src="../images/10.jpg" alt="chocolate cupcake with vanilla frosting">
           <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
-        <div class="gallery-item">
+        <div tabindex="12" class="gallery-item">
           <img src="../images/11.jpg" alt="chocolate cake with chocolate drizzle">
           <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
-        <div class="gallery-item">
+        <div tabindex="13" class="gallery-item">
           <img src="../images/12.jpg" alt="chocolate cupcake with chocolate shavings on top of frosting">
           <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
@@ -83,10 +83,10 @@
     <footer>
       <p>Contact Us On Social Media OR By Calling 555 - 555 - 5555</p>
       <section class="social-media">
-        <a role="link" href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
-        <a role="link" href="https://www.facebook.com"><i class="fab fa-facebook-square"></i></a>
-        <a role="link" href="https://www.google.com"><i class="fas fa-envelope-open"></i></a>
-        <a role="link" href="https://www.twitter.com"><i class="fab fa-twitter"></i></a>
+        <a tabindex="14" role="link" href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
+        <a tabindex="15" role="link" href="https://www.facebook.com"><i class="fab fa-facebook-square"></i></a>
+        <a tabindex="16" role="link" href="https://www.google.com"><i class="fas fa-envelope-open"></i></a>
+        <a tabindex="17" role="link" href="https://www.twitter.com"><i class="fab fa-twitter"></i></a>
       </section>
     </footer>
     <script type="text/javascript" src="../main.js"></script>
