--- a/public/landing.html
+++ b/public/landing.html
@@ -12,7 +12,7 @@
   <body id="landing">
     <header class="content">
       <div class="header flex">
-        <i class="hamburger fas fa-bars"></i>
+        <i tabindex="1" class="hamburger fas fa-bars"></i>
         <div class="menu">
           <div class="links">
             <h3>MENU</h3>
