Change tabindex of gallery buttons and styled buttons for focus

--- a/public/gallery.html
+++ b/public/gallery.html
@@ -12,7 +12,7 @@
   <body id="gallery">
     <div class="content">
       <div class="header flex">
-        <i class="hamburger fas fa-bars"></i>
+        <i tabindex="0" class="hamburger fas fa-bars"></i>
         <div class="menu">
           <div class="links">
             <h3>MENU</h3>
@@ -23,59 +23,59 @@
           <img class="cake-review" src="../images/cake_review.png">
         </div>
         <i class="close fas fa-times"></i>
-        <a href="landing.html">
+        <!-- <a href="landing.html"> -->
           <h1 class="logo">The Custom Cakery</h1>
-        </a>
+        <!-- </a> -->
       </div>
       <h4>CHECK OUT OUR CAKES!</h4>
       <div class="gallery-wrapper">
         <div class="gallery-item">
           <img src="../images/01.jpg" alt="rose created with chocolate frosting on a cupcake">
-          <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
+          <button type="button" class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
         <div class="gallery-item">
           <img src="../images/02.jpg" alt="slice of tiramusu on a plate">
-          <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
+          <button type="button" class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
         <div class="gallery-item">
           <img src="../images/03.jpg" alt="hand holding a cupcake with frosting">
-          <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
+          <button type="button" class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
         <div class="gallery-item">
           <img src="../images/04.jpg" alt="slice of chocolate cake with chocolate filling on plate">
-          <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
+          <button type="button" class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
         <div class="gallery-item">
           <img src="../images/05.jpg" alt="cupcake with fruity pebbles on frosting">
-          <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
+          <button type="button" class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
         <div class="gallery-item">
           <img src="../images/06.jpg" alt="drizzled caked with unicorn on top">
-          <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
+          <button type="button" class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
         <div class="gallery-item">
           <img src="../images/07.jpg" alt="naked cake with rasperries on top of frosting">
-          <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
+          <button type="button" class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
         <div class="gallery-item">
           <img src="../images/08.jpg" alt="cake with sparkler on top and cactuses on the side">
-          <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
+          <button type="button" class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
-        <div  class="gallery-item">
+        <div class="gallery-item">
           <img src="../images/09.jpg" alt="rainbow cupcake">
-          <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
+          <button type="button" class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
-        <div  class="gallery-item">
+        <div class="gallery-item">
           <img src="../images/10.jpg" alt="chocolate cupcake with vanilla frosting">
-          <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
+          <button type="button" class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
-        <div  class="gallery-item">
+        <div class="gallery-item">
           <img src="../images/11.jpg" alt="chocolate cake with chocolate drizzle">
-          <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
+          <button type="button" class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
         <div  class="gallery-item">
           <img src="../images/12.jpg" alt="chocolate cupcake with chocolate shavings on top of frosting">
-          <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
+          <button type="button" class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
       </div>
       <h1>"I ate a cereal cupcake from The Custom Cakery and it was LITERALLY the best thing I've ever eaten." - yet another satisfied customer</h1>
