Remove a tag from enclosing h1

--- a/public/landing.html
+++ b/public/landing.html
@@ -12,7 +12,7 @@
   <body id="landing">
     <header class="content">
       <div class="header flex">
-        <i tabindex="1" class="hamburger fas fa-bars"></i>
+        <i tabindex="0" class="hamburger fas fa-bars"></i>
         <div class="menu">
           <div class="links">
             <h3>MENU</h3>
@@ -23,9 +23,9 @@
           <img class="cake-review" src="../images/cake_review.png">
         </div>
         <i class="close fas fa-times"></i>
-        <a href="landing.html">
-          <h1 class="logo">The Custom Cakery</h1>
-        </a>
+        <!-- <a href="landing.html"> -->
+          <h1 tabindex="-1" class="logo">The Custom Cakery</h1>
+        <!-- </a> -->
       </div>
     </header>
       <main>
