Adjust tabindex as needed

--- a/public/gallery.html
+++ b/public/gallery.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="../images/favicon.png" type="image/favicon" sizes="16x16">
   </head>
   <body id="gallery">
-    <div class="content">
+    <header class="content">
       <div class="header flex">
         <i tabindex="0" class="hamburger fas fa-bars"></i>
         <div class="menu">
@@ -22,64 +22,65 @@
           </div>
           <img class="cake-review" src="../images/cake_review.png">
         </div>
-        <i class="close fas fa-times"></i>
-        <!-- <a href="landing.html"> -->
-          <h1 class="logo">The Custom Cakery</h1>
-        <!-- </a> -->
+        <i tabindex="0" class="close fas fa-times"></i>
+          <h1 tabindex="-1" class="logo">The Custom Cakery</h1>
       </div>
-      <h4>CHECK OUT OUR CAKES!</h4>
+    </header>
+    <main class="main-gallery">
+      <h2>CHECK OUT OUR CAKES!</h2>
       <div class="gallery-wrapper">
         <div class="gallery-item">
           <img src="../images/01.jpg" alt="rose created with chocolate frosting on a cupcake">
-          <button type="button" class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
+          <button type="button" class="gallery-btn"><a tabindex="-1" href="order.html">ORDER THIS CAKE</a></button>
         </div>
         <div class="gallery-item">
           <img src="../images/02.jpg" alt="slice of tiramusu on a plate">
-          <button type="button" class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
+          <button type="button" class="gallery-btn"><a tabindex="-1" href="order.html">ORDER THIS CAKE</a></button>
         </div>
         <div class="gallery-item">
           <img src="../images/03.jpg" alt="hand holding a cupcake with frosting">
-          <button type="button" class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
+          <button type="button" class="gallery-btn"><a tabindex="-1" href="order.html">ORDER THIS CAKE</a></button>
         </div>
         <div class="gallery-item">
           <img src="../images/04.jpg" alt="slice of chocolate cake with chocolate filling on plate">
-          <button type="button" class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
+          <button type="button" class="gallery-btn"><a tabindex="-1" href="order.html">ORDER THIS CAKE</a></button>
         </div>
         <div class="gallery-item">
           <img src="../images/05.jpg" alt="cupcake with fruity pebbles on frosting">
-          <button type="button" class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
+          <button type="button" class="gallery-btn"><a tabindex="-1" href="order.html">ORDER THIS CAKE</a></button>
         </div>
         <div class="gallery-item">
           <img src="../images/06.jpg" alt="drizzled caked with unicorn on top">
-          <button type="button" class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
+          <button type="button" class="gallery-btn"><a tabindex="-1" href="order.html">ORDER THIS CAKE</a></button>
         </div>
         <div class="gallery-item">
           <img src="../images/07.jpg" alt="naked cake with rasperries on top of frosting">
-          <button type="button" class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
+          <button type="button" class="gallery-btn"><a tabindex="-1" href="order.html">ORDER THIS CAKE</a></button>
         </div>
         <div class="gallery-item">
           <img src="../images/08.jpg" alt="cake with sparkler on top and cactuses on the side">
-          <button type="button" class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
+          <button type="button" class="gallery-btn"><a tabindex="-1" href="order.html">ORDER THIS CAKE</a></button>
         </div>
         <div class="gallery-item">
           <img src="../images/09.jpg" alt="rainbow cupcake">
-          <button type="button" class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
+          <button type="button" class="gallery-btn"><a tabindex="-1" href="order.html">ORDER THIS CAKE</a></button>
         </div>
         <div class="gallery-item">
           <img src="../images/10.jpg" alt="chocolate cupcake with vanilla frosting">
-          <button type="button" class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
+          <button type="button" class="gallery-btn"><a tabindex="-1" href="order.html">ORDER THIS CAKE</a></button>
         </div>
         <div class="gallery-item">
           <img src="../images/11.jpg" alt="chocolate cake with chocolate drizzle">
-          <button type="button" class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
+          <button type="button" class="gallery-btn"><a tabindex="-1" href="order.html">ORDER THIS CAKE</a></button>
         </div>
         <div  class="gallery-item">
           <img src="../images/12.jpg" alt="chocolate cupcake with chocolate shavings on top of frosting">
-          <button type="button" class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
+          <button type="button" class="gallery-btn"><a tabindex="-1" href="order.html">ORDER THIS CAKE</a></button>
         </div>
       </div>
-      <h1>"I ate a cereal cupcake from The Custom Cakery and it was LITERALLY the best thing I've ever eaten." - yet another satisfied customer</h1>
-    </div>
+      <h3>"I ate a cereal cupcake from The Custom Cakery and it was LITERALLY the best thing I've ever eaten." <span> <!--  -->yet another satisfied customer<span></h3>
+      </div>
+    </main>
     <footer>
       <p>Contact Us On Social Media OR By Calling 555 - 555 - 5555</p>
       <section class="social-media">
