--- a/public/gallery.html
+++ b/public/gallery.html
@@ -13,7 +13,7 @@
     <header class="content">
       <div class="header flex">
         <i tabindex="0" class="hamburger fas fa-bars"></i>
-        <div class="menu">
+        <div aria-modal="menu" class="menu">
           <div class="links">
             <h3>MENU</h3>
             <a href="landing.html">&bull; Home</a>
