--- a/public/landing.html
+++ b/public/landing.html
@@ -13,7 +13,7 @@
     <header class="content">
       <div class="header flex">
         <i tabindex="0" class="hamburger fas fa-bars"></i>
-        <div class="menu">
+        <div aria-modal="menu" class="menu">
           <div class="links">
             <h3>MENU</h3>
             <a href="landing.html">&bull; Home</a>
@@ -22,7 +22,7 @@
           </div>
           <img class="cake-review" src="../images/cake_review.png">
         </div>
-        <i class="close fas fa-times"></i>
+        <i tabindex="0" class="close fas fa-times"></i>
           <h1 tabindex="-1" class="logo">The Custom Cakery</h1>
       </div>
     </header>
