Add id to some of the form elements to check accessbility

--- a/public/order.html
+++ b/public/order.html
@@ -15,7 +15,7 @@
       <div class="modal-content">
        <h3>Want to Save 10% on Your First Cake Purchase?! Enter your email here, and join the cake club!</h3>
         <div class="input">
-          <input class="modal-email-field" type="text" >
+          <input class="modal-email-field" type="text">
         </div>
         <div>
           <button class="margin-top--small modal-button">JOIN THE CAKE CLUB!</button>
@@ -42,13 +42,13 @@
       <h2 id="h2-on-order-page">Use This Form To Order Your Cake</h2>
       <form>
         <label for="name">Name: </label>
-        <input required type="text">
+        <input required type="text" id="name">
         <label for="address">Address:</label>
-        <input required type="text">
+        <input required type="text" id="address">
         <label for="email">Email Address:</label>
         <input required type="text">
         <label for="phone">Phone Number:</label>
-        <input required type="text">
+        <input required type="text" id="phone">
         <div>
           <label for="type-of-cake">Desired Cake</label>
           <input type="radio" name="cake" checked><p>Whole Cake</p>
